[project]
name = "life-13-09-25"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalya Krukova",email = "k-natali2009@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
